--- a/ios/CosmoShop.xcodeproj/xcshareddata/xcschemes/CosmoShop.xcscheme
+++ b/ios/CosmoShop.xcodeproj/xcshareddata/xcschemes/CosmoShop.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "CosmoShop.app"
-               BlueprintName = "CosmoShop"
-               ReferencedContainer = "container:CosmoShop.xcodeproj">
+               BuildableName = "GlowCart.app"
+               BlueprintName = "GlowCart"
+               ReferencedContainer = "container:GlowCart.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "CosmoShopTests.xctest"
-               BlueprintName = "CosmoShopTests"
-               ReferencedContainer = "container:CosmoShop.xcodeproj">
+               BuildableName = "GlowCartTests.xctest"
+               BlueprintName = "GlowCartTests"
+               ReferencedContainer = "container:GlowCart.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "CosmoShop.app"
-            BlueprintName = "CosmoShop"
-            ReferencedContainer = "container:CosmoShop.xcodeproj">
+            BuildableName = "GlowCart.app"
+            BlueprintName = "GlowCart"
+            ReferencedContainer = "container:GlowCart.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "CosmoShop.app"
-            BlueprintName = "CosmoShop"
-            ReferencedContainer = "container:CosmoShop.xcodeproj">
+            BuildableName = "GlowCart.app"
+            BlueprintName = "GlowCart"
+            ReferencedContainer = "container:GlowCart.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
